# x.uma

./: .gitattributes  .gitignore  404.html  CLAUDE.md  LICENSE-APACHE  LICENSE-MIT  README.md  buf.gen.rust.yaml  buf.gen.yaml  index.html  justfile  print.html  searcher-c2a407aa.js  searchindex-20d2e022.js  searchindex-80c39d86.js  toc-0ba3f3c3.js  toc-7afcf466.js  toc-eb7188b1.js  toc.html
.claude/agents/: constraint-auditor.md  phase-planner.md
.claude/commands/: audit.md  check-breaking.md  validate.md
.claude/hooks/: hooks.json
.claude/scripts/: check-constraints.sh  check-path-consistency.sh  post-write.sh  pre-commit  project-paths.sh  validate-bash.sh  validate-proto.sh  validate-rust.sh  validate-write.sh
.claude/skills/maintainer/: SKILL.md
.claude/skills/rust-1337/: SKILL.md
.claude/skills/rust-mastery/: SKILL.md
.github/workflows/: docs.yml  release-crust.yml  release.yml
bench/: .gitignore  RESULTS.md
bumi/: README.md  SECURITY.md  biome.json  package.json  tsconfig.json
bumi/bench/: compile.bench.ts  config.bench.ts  evaluate.bench.ts  redos.bench.ts
bumi/src/: config.ts  index.ts  matcher.ts  predicate.ts  registry.ts  string-matchers.ts  testing.ts  types.ts
bumi/src/http/: gateway.ts  index.ts  inputs.ts  registry.ts  request.ts
bumi/tests/: config-conformance.test.ts  config.test.ts  conformance.test.ts  http-conformance.test.ts  matcher.test.ts  predicate.test.ts  registry.test.ts  security.test.ts  string-matchers.test.ts
bumi/tests/helpers/: fixture-loader.ts
concepts/: pipeline.html  predicates.html  semantics.html  type-erasure.html
development/: roadmap.html
docs/: book.toml
docs/src/: README.md  SUMMARY.md
docs/src/concepts/: pipeline.md  predicates.md  semantics.md  type-erasure.md
domains/: http.html
explain/: architecture.html  when-to-use.html  why-aces.html  xds-semantics.html
getting-started/: choose.html  python.html  rust.html  typescript.html
guides/: adding-domain.html
learn/: quick-start.html
p.uma/: README.md
performance/: security.html
playground/: README.md  package.json  vite.config.ts
pr-preview/pr-11/: 404.html  index.html  print.html  searcher-c2a407aa.js  searchindex-6b1472f2.js
pr-preview/pr-13/: 404.html  index.html  print.html  searcher-c2a407aa.js  searchindex-8e763299.js
pr-preview/pr-14/: searchindex-86c44684.js
pr-preview/pr-17/: index.html
pr-preview/pr-19/: index.html  print.html
pr-preview/pr-21/: 404.html  index.html  print.html  searcher-c2a407aa.js  searchindex-012befb0.js  toc-ddcda326.js  toc.html
pr-preview/pr-4/: 404.html  index.html  print.html  searcher-c2a407aa.js  searchindex-670c697b.js  searchindex-71346433.js  toc-fa7c0e76.js  toc.html
pr-preview/pr-5/: searchindex-5914a018.js  toc-4608792b.js
pr-preview/pr-7/: print.html
pr-preview/pr-8/: 404.html  index.html  print.html  searcher-c2a407aa.js  searchindex-1e1393d1.js
pr-preview/pr-9/: 404.html  index.html  print.html  searcher-c2a407aa.js  searchindex-618bf292.js  searchindex-a2ea8057.js  toc-2a05d733.js  toc-9ddb2f6c.js  toc.html
puma/: README.md  SECURITY.md  pyproject.toml
puma/src/puma/: __init__.py  _matcher.py  _predicate.py  _registry.py  _string_matchers.py  testing.py
puma/src/puma/http/: __init__.py  _gateway.py  _registry.py
puma/src/xuma/: __init__.py  _config.py  _matcher.py  _predicate.py  _registry.py  _string_matchers.py  _types.py  testing.py
puma/src/xuma/http/: __init__.py  _gateway.py  _inputs.py  _registry.py  _request.py
puma/tests/: conftest.py  test_config.py  test_config_conformance.py  test_matcher.py  test_predicate.py  test_registry.py  test_string_matchers.py
puma/tests/bench/: test_bench_compile.py  test_bench_config.py  test_bench_evaluate.py  test_bench_redos.py
r.umi/: Cargo.toml
r.umi/rumi/: Cargo.toml
r.umi/rumi-core/: Cargo.toml
r.umi/rumi-domains/: Cargo.toml
r.umi/rumi-domains/src/: http.rs  lib.rs  test.rs
r.umi/rumi-proto/: Cargo.toml
reference/: cli.html  config.html  http.html  proto.html  python.html  rust.html  typescript.html
rumi/: Cargo.toml
rumi/cli/: Cargo.toml  README.md
rumi/cli/src/: main.rs
rumi/core/: Cargo.toml  README.md
rumi/core/benches/: compile.rs  config.rs  evaluate.rs  redos.rs
rumi/core/src/: config.rs  data_input.rs  field_matcher.rs  input_matcher.rs  lib.rs  matcher.rs  matcher_tree.rs  matching_data.rs  on_match.rs  predicate.rs  radix_tree.rs  registry.rs  string_match.rs  trace.rs
rumi/core/src/claude/: compiler.rs  config.rs  context.rs  inputs.rs  mod.rs
rumi/crusts/python/: Cargo.toml  pyproject.toml
rumi/crusts/python/python/xuma_crust/: __init__.py
rumi/crusts/python/src/: convert.rs  lib.rs  matcher.rs
rumi/crusts/python/tests/: test_bench_config.py  test_bench_crusty.py  test_hook_matcher.py  test_http_matcher.py  test_test_matcher.py
rumi/crusts/wasm/: Cargo.toml  package.json
rumi/crusts/wasm/bench/: config.bench.ts  crusty.bench.ts
rumi/crusts/wasm/src/: config.rs  convert.rs  lib.rs  matcher.rs
rumi/crusts/wasm/tests/: hook_matcher.test.ts  http_matcher.test.ts  test_matcher.test.ts
rumi/ext/claude/: Cargo.toml
rumi/ext/claude/src/: compiler.rs  config.rs  context.rs  inputs.rs  lib.rs
rumi/ext/http/: Cargo.toml
rumi/ext/http/src/: compiler.rs  context.rs  inputs.rs  lib.rs  message.rs  simple.rs
rumi/ext/test/: Cargo.toml
rumi/ext/test/src/: config_fixture.rs  fixture.rs  lib.rs
rumi/ext/test/tests/: config_conformance.rs  conformance.rs  registry_conformance.rs
rumi/proto/: Cargo.toml
rumi/proto/src/: any_resolver.rs  convert.rs  lib.rs
rumi/rumi/: Cargo.toml
rumi/rumi-core/: Cargo.toml
rumi/rumi-core/src/: data_input.rs  input_matcher.rs  lib.rs  matching_data.rs  on_match.rs
rumi/rumi-domains/: Cargo.toml
rumi/rumi-domains/src/: lib.rs
rumi/rumi-proto/: Cargo.toml
rumi/rumi-proto/src/: lib.rs
rumi/rumi/src/: lib.rs
rumi/src/: input_matcher.rs  lib.rs  matching_data.rs
rumi/src/adapters/: claude.rs  mod.rs  test.rs
scripts/: bench_ingest.py  bench_report.py  pyproject.toml
spec/tests/: README.md
(+188 files in other folders)
