[package]
name = "rumi"
description = "Rust implementation of xDS Unified Matcher API"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["xds", "matcher", "envoy", "config"]
categories = ["config", "data-structures"]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
regex = "1"  # Linear-time regex (RE2 semantics, ReDoS-safe)
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
divan = "0.1"
serde.workspace = true
serde_yaml.workspace = true

[[bench]]
name = "evaluate"
harness = false

[[bench]]
name = "compile"
harness = false

[[bench]]
name = "redos"
harness = false
