[package]
name = "rumi-proto"
description = "Proto-generated types for x.uma — xDS + xuma extensions"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
prost = "0.13"
pbjson = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
rumi-core = { workspace = true, features = ["registry"] }

# Alias pbjson-types as prost_types so generated code using ::prost_types::Any
# gets serde::Serialize/Deserialize impls (needed for prost-serde compat)
[dependencies.prost_types]
package = "pbjson-types"
version = "0.7"

[dev-dependencies]
rumi-test = { path = "../ext/test", features = ["proto"] }
