[package]
name = "rumi-core"
description = "Core matcher engine for rumi - no_std compatible"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = []
# alloc feature for no_std + alloc environments
alloc = []

[dependencies]
