[package]
name = "puma-crusty"
description = "Python bindings for rumi via PyO3"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "puma_crusty"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
rumi-core = { path = "../../core", features = ["registry", "claude"] }
rumi-http = { path = "../../ext/http", default-features = false, features = ["registry"] }
rumi-test = { path = "../../ext/test", features = ["registry", "fixtures"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
