[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "puma-crusty"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "puma_crusty"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=5.0",
    "puma @ file:///${PROJECT_ROOT}/../../../puma",
]
