[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "xuma-crust"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "xuma_crust"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=5.0",
    "xuma @ file:///${PROJECT_ROOT}/../../../puma",
]
