[package]
name = "xuma-crust-wasm"
description = "TypeScript bindings for rumi via wasm-bindgen"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "xuma_crust"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = { workspace = true }
serde_yaml = { workspace = true }
rumi-core = { path = "../../core", features = ["registry", "claude"] }
rumi-http = { path = "../../ext/http", default-features = false, features = ["registry"] }
rumi-test = { path = "../../ext/test", features = ["registry", "fixtures"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
