[package]
name = "rumi-claude"
description = "Claude Code hooks domain for rumi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
registry = ["rumi/registry"]

[dependencies]
rumi = { workspace = true, features = ["serde"] }
serde.workspace = true

[dev-dependencies]
serde_yaml.workspace = true
