[package]
name = "rumi-claude"
description = "Claude Code hooks domain for rumi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
registry = ["rumi/registry"]
proto = ["registry", "dep:rumi-proto"]

[dependencies]
rumi = { workspace = true, features = ["serde"] }
serde.workspace = true
rumi-proto = { path = "../../proto", optional = true }

[dev-dependencies]
serde_json.workspace = true
serde_yaml.workspace = true
