[package]
name = "rumi-http"
description = "HTTP domain for rumi - Gateway API matching on ext_proc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["xds", "matcher", "http", "envoy", "gateway"]
categories = ["config", "web-programming"]

[features]
default = ["ext-proc"]
ext-proc = ["dep:envoy-grpc-ext-proc", "dep:k8s-gateway-api", "dep:k8s-openapi"]
registry = ["rumi-core/registry", "serde"]
proto = ["registry", "ext-proc", "dep:rumi-proto"]

[dependencies]
rumi-core.workspace = true
serde = { workspace = true, optional = true }
rumi-proto = { path = "../../proto", version = "0.0.2", optional = true }

# ext_proc types (ProcessingRequest, ProcessingResponse, etc.)
envoy-grpc-ext-proc = { version = "0.1", optional = true }

# Gateway API types (HttpRouteMatch, HttpPathMatch, etc.)
k8s-gateway-api = { version = "0.16", optional = true }

# k8s-openapi needs a version feature enabled
k8s-openapi = { version = "0.20", features = ["v1_28"], optional = true }

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
