[package]
name = "rumi-test"
description = "Test domain for rumi conformance testing"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
fixtures = ["serde", "serde_yaml", "serde_json"]
registry = ["rumi-core/registry", "serde"]
proto = ["registry", "dep:rumi-proto"]

[dependencies]
rumi-core.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
rumi-proto = { path = "../../proto", optional = true }

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
